--- a/ImageCount/ImageCount.yaml
+++ b/ImageCount/ImageCount.yaml
@@ -1,7 +1,6 @@
-title: Image Count
+title: ImageCount
 description: A notebook that shows the Camera Image count since Sep 24
 authors:
   - name: Yousuke Utsumi
-    slack: @youtsumi
-tags:
-  - first attempt
+    slack: @Yousuke
+
