--- a/ImageCount/ImageCount.yaml
+++ b/ImageCount/ImageCount.yaml
@@ -2,5 +2,5 @@ title: ImageCount
 description: A notebook that shows the Camera Image count since Sep 24
 authors:
   - name: Yousuke Utsumi
-    slack: @Yousuke
+    slack: Yousuke
 
