--- a/ImageCount/ImagesOfTheDay.yaml
+++ b/ImageCount/ImagesOfTheDay.yaml
@@ -5,7 +5,7 @@ authors:
     slack: Yousuke
 
 parameters:
-  date:
+  dayObs:
     type: string
     description: Night (YYYY-MM-DD)
     default: "Today"
