made changed per a Travis request

--- a/Run7/ImageCount.yaml
+++ b/Run7/ImageCount.yaml
@@ -1,5 +1,5 @@
 title: ImageCount
-description: A notebook that shows the Camera Image count since Sep 24
+description: A notebook that shows the Camera Image count since April 15, 2025
 authors:
   - name: Yousuke Utsumi
     slack: Yousuke
