--- a/times-square.yaml
+++ b/times-square.yaml
@@ -1,3 +1,3 @@
 enabled: true
 description: >
-    Camera EO testing related notebook will be posted in this repository 
+    Camera EO testing and on-sky operation related notebook will be posted in this repository 
