--- a/operations/TempSensitivity.yaml
+++ b/operations/TempSensitivity.yaml
@@ -1,4 +1,4 @@
-title: Monitor cryo system peformance with respect to the ambient temperature
+title: TempSensitivity
 description: The known Cryo performance degration is explained by the re-condensation in the vapor lines. This notebook aims at showing the C3Exit Temp, which is the most sensitive parameter to the cryo degration, with respect to the delta temp between the ambient temperature and the phase separator temperature.
 authors:
   - name: Yousuke Utsumi
