--- a/operations/CryoParameters.yaml
+++ b/operations/CryoParameters.yaml
@@ -11,7 +11,7 @@ parameters:
     default: "Now"
 
   duration_in_day:
-    type: float
+    type: number
     tion: Duration (days) (e.g., 2, 50, or 200!)
     default: 2
 
