--- a/operations/CryoParameters.yaml
+++ b/operations/CryoParameters.yaml
@@ -7,7 +7,7 @@ authors:
 parameters:
   t_end:
     type: string
-    description: Time to end this plot.
+    description: Time to end this plot. (Now or '2025-11-19 02:00:00')
     default: "Now"
 
   duration_in_day:
