--- a/operations/FES/CarouselError_sticky.yaml
+++ b/operations/FES/CarouselError_sticky.yaml
@@ -1,5 +1,5 @@
 title: CarouselError_sticky
-description: The carousel maintain the LSSTcam  filters out of the beam and present the selected filter to be installed on the focal plane to the AutoChanger. When not used for some time ( ~10 hours and more),it mays fail to start its movement. This generate a crash of the carousel controler with a set of caracteristic errors :
+description: The carousel maintain the LSSTcam  filters out of the beam and present the selected filter to be installed on the focal plane to the AutoChanger. When not used for some time ( ~10 hours and more),it mays fail to start its movement. This generate a crash of the carousel controler with a set of caracteristic errors 
 
 Error code = 0xff12 / error name = Auxiliary Sensor Direction Error
 
