--- a/operations/CryoParameters.yaml
+++ b/operations/CryoParameters.yaml
@@ -22,7 +22,7 @@ parameters:
 
   time_interval:
     type: string
-    description: Time interval for data aggregation in Chronograph format (e.g., '5m', '1h')
+    description: Time interval for data aggregation in Chronograph format (e.g., use '5m' for 2 days, use '1h' for 100 days)
     default: '5m'
 
   exclude:
