Change default exclusion value to 'None'

--- a/operations/CryoParameters.yaml
+++ b/operations/CryoParameters.yaml
@@ -28,4 +28,4 @@ parameters:
   exclude:
     type: string
     description: List circuits to exclude from the plot, or None
-    default: 'cryo3'
+    default: 'None'
