--- a/operations/CryoParameters.yaml
+++ b/operations/CryoParameters.yaml
@@ -8,7 +8,8 @@ parameters:
   t_end:
     type: string
     description: Time to end this plot. (Now or '2025-11-19 02:00:00')
-    default: "Now"
+#    default: "Now"
+    dynamic_default: "today"
 
   duration_in_day:
     type: number
@@ -29,3 +30,7 @@ parameters:
     type: string
     description: List circuits to exclude from the plot, or None
     default: 'None'
+
+schedule:
+  freq: "daily"
+  hour: 8
