--- a/operations/vacuum.yaml
+++ b/operations/vacuum.yaml
@@ -15,3 +15,7 @@ parameters:
     description: Duration (days)
     default: 5
 
+  time_interval:
+    type: string
+    description: Time interval for data aggregation in Chronograph format (e.g., use '5m' for 2 days, use '1h' for 100 days)
+    default: '1m'
