--- a/operations/TempSensitivity.yaml
+++ b/operations/TempSensitivity.yaml
@@ -15,3 +15,9 @@ parameters:
     description: Duration (days)
     default: 10
 
+  time_interval:
+    type: string
+    description: Time interval for data aggregation in Chronograph format (e.g., use '5m' for 2 days, use '1h' for 100 days)
+    default: '5m'
+
+
