--- a/operations/vacuum.yaml
+++ b/operations/vacuum.yaml
@@ -21,11 +21,11 @@ parameters:
     default: '1m'
 
   a:
-    type: float
+    type: number 
     description: Coefficient a for the linear fit (log(I) = a*log(V) + b)
     default: 1.06823544
 
   b:
-    type: float
+    type: number
     description: Coefficient b for the linear fit (log(I) = a*log(V) + b)
     default: -5.42086628
