--- a/operations/vacuum.yaml
+++ b/operations/vacuum.yaml
@@ -29,3 +29,24 @@ parameters:
     type: number
     description: Coefficient b for the linear fit (log(I) = a*log(V) + b)
     default: -5.42086628
+
+  vacmin:
+    type: number
+    description: minimum vacuum pressure for plots
+    default: 7e-9
+
+  vacmmax:
+    type: number
+    description: maximum vacuum pressure for plots
+    default: 3e-7
+
+  curmin:
+    type: number
+    description: minimum currents for plots
+    default: 3e-3
+
+  curmax:
+    type: number
+    description: maximum currents for plots
+    default: 1e-1
+
