--- a/operations/vacuum.yaml
+++ b/operations/vacuum.yaml
@@ -35,7 +35,7 @@ parameters:
     description: minimum vacuum pressure for plots [Torr]
     default: 0.000000007
 
-  vacmmax:
+  vacmax:
     type: number
     description: maximum vacuum pressure for plots [Torr]
     default: 0.0000003
